# url-shortener

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  Makefile  Rocket.toml.example  build.rs  diesel.toml  readme.md  sqlite.db.inital
migrations/2025-03-16-110640_url_entry/: down.sql  up.sql
migrations/2025-03-17-125909_magic_email_link/: down.sql  up.sql
src/: main.rs
src/auth/: email.rs  github.rs  google.rs  jwts.rs  mod.rs
src/db/: mod.rs  models.rs  schema.rs  url.rs
src/dto/: mod.rs
src/handlers/: url.rs
web/: index.html  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
web/src/: App.svelte
web/src/api/: index.ts  url.ts
web/src/common/: Icon.svelte
web/src/pages/Home/: Home.svelte
web/src/pages/Home/components/: create.svelte  jwt.ts  navbar.svelte  row.svelte
web/src/pages/Login/: Login.css  Login.svelte
