[package]
name = "url-shortener"
version = "0.1.0"
edition = "2024"


[dependencies]
chrono = { version = "0.4.40", features = ["serde"] }
diesel = { version = "2.2.8", features = ["sqlite", "chrono"] }
dotenvy = "0.15.7"
rocket = { version = "0.5.1", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
