[package]
name = "url-shortener"
version = "0.1.0"
edition = "2024"


[dependencies]
anyhow = "1.0.97"
chrono = { version = "0.4.40", features = ["serde", "now"] }
diesel = { version = "2.2.8", features = ["sqlite", "chrono"] }
dotenvy = "0.15.7"
jsonwebtoken = "9.3.1"
md5 = "0.7.0"
reqwest = { version = "0.12.14", default-features = false, features = [
  "json",
  "rustls-tls",
] }
rocket = { version = "0.5.1", features = ["json"] }
rocket_oauth2 = "0.5.0"
serde = { version = "1.0.219", features = ["derive"] }
uuid = { version = "1.16.0", features = ["v3", "v5"] }
